Bug 1241651. Remove nsPresContext::GetDisplayRootPresContext. r=mattwoodrow

It should no longer serve any purpose different from nsPresContext::GetRootPresContext.